# better-agent

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Package.swift  README.md  SWIFT_REFACTOR_PLAN.md  TAKEOVER_EXECUTION_WORKFLOW.md  package-lock.json  package.json  test_ink_flex.mjs  test_ink_scroll.mjs  test_ink_wrap.mjs  test_proxy.js  test_rows.mjs  test_tui.js  test_tui.mjs  test_tui2.js  test_tui_layout.mjs  tsconfig.json
.codex/environments/: environment.toml
.github/workflows/: deploy.yml  swift-ci.yml
.playwright-mcp/: page-2026-04-09T08-08-01-009Z.yml  page-2026-04-09T08-09-54-196Z.yml  page-2026-04-09T08-11-31-012Z.yml  page-2026-04-09T08-17-54-925Z.yml  page-2026-04-09T08-58-34-468Z.yml  page-2026-04-09T09-05-17-387Z.yml  page-2026-04-09T09-05-20-491Z.yml  page-2026-04-09T09-06-53-673Z.yml  page-2026-04-09T15-55-17-907Z.yml  page-2026-04-09T16-21-42-416Z.yml  page-2026-04-09T16-25-19-009Z.yml  page-2026-04-09T16-33-10-239Z.yml  page-2026-04-09T16-39-01-033Z.yml  page-2026-04-09T16-46-24-607Z.yml  page-2026-04-09T16-57-00-310Z.yml  page-2026-04-09T17-01-04-318Z.yml  page-2026-04-09T17-03-41-919Z.yml  page-2026-04-09T17-03-44-949Z.yml  page-2026-04-09T17-07-36-852Z.yml  page-2026-04-09T17-07-39-882Z.yml  page-2026-04-10T00-33-07-816Z.yml  page-2026-04-10T00-33-18-774Z.yml  page-2026-04-10T00-37-16-534Z.yml  page-2026-04-10T00-37-37-215Z.yml  page-2026-04-10T00-38-08-246Z.yml  page-2026-04-10T00-39-56-069Z.yml  page-2026-04-10T00-48-38-879Z.yml  page-2026-04-10T00-48-44-475Z.yml  page-2026-04-10T00-48-45-596Z.yml  page-2026-04-10T00-49-52-181Z.yml  page-2026-04-10T00-49-59-459Z.yml  page-2026-04-10T00-53-24-416Z.yml  page-2026-04-10T00-53-34-895Z.yml  page-2026-04-10T01-09-45-271Z.yml  page-2026-04-11T11-22-17-431Z.yml  page-2026-04-11T11-22-35-552Z.yml  page-2026-04-11T11-23-36-133Z.yml  page-2026-04-11T11-24-58-313Z.yml  page-2026-04-11T11-39-11-413Z.yml  page-2026-04-11T11-59-38-456Z.yml  (+15 more)
.raxode/: AGENTS.md
.raxode/agents/: agent.core_3Amain.json
Examples/PraxisAppleHostEmbeddingExample/: main.swift
Examples/PraxisExportBaselineExample/: main.swift
Examples/PraxisFFIEmbeddingExample/: main.swift
Examples/PraxisRuntimeKitCapabilitiesExample/: main.swift
Examples/PraxisRuntimeKitCmpTapExample/: main.swift
Examples/PraxisRuntimeKitGovernedExecutionExample/: main.swift
Examples/PraxisRuntimeKitMpExample/: main.swift
Examples/PraxisRuntimeKitRunExample/: main.swift
Examples/PraxisRuntimeKitSearchExample/: main.swift
Examples/PraxisRuntimeKitSmoke/: main.swift
Sources/PraxisAppleUI/: PraxisAppleUI.swift  PraxisAppleUIModels.swift  PraxisAppleUIStores.swift
Sources/PraxisCLI/: PraxisCLIControllers.swift  PraxisCLIModels.swift
Sources/PraxisCheckpoint/: PraxisCheckpoint.swift  (+2 more)
better-agent/core/: CMakeLists.txt
better-agent/core/bindings/node/: CMakeLists.txt  agent_core_napi.cpp
better-agent/core/bindings/node/tests/: memory_smoke.js
better-agent/core/bindings/swift/: module.modulemap
better-agent/core/cpp/: agent_core.cpp  tool_call_sdk_bridge.cpp  tool_call_sdk_bridge.hpp
better-agent/core/cpp/internal/: agent_core_internal.hpp  core_execution.cpp  core_models.cpp  core_provider.cpp  core_registry.cpp  core_runtime.cpp  core_rust_bridge.cpp  core_rust_bridge.hpp  core_state.cpp
better-agent/core/header/: agent_core.h
better-agent/core/rust/: Cargo.toml
better-agent/core/rust/src/: ffi.rs  lib.rs
better-agent/core/rust/src/gpt_runtime/: code_tools.rs  computer_tools.rs  config.rs  custom_tools.rs  function_tools.rs  hooks.rs  mcp_tools.rs  mod.rs  openai_execution.rs  openai_provider.rs  payload_normalization.rs  presets.rs  profiles.rs  provider_common.rs  request.rs  runtime_capabilities.rs  runtime_normalization.rs  shell.rs  shell_runtime.rs  skills.rs  tool_outputs.rs  web_search.rs
better-agent/core/tests/: CMakeLists.txt
better-agent/core/tests/common/: test_helpers.hpp
better-agent/core/tests/integration/sdk/: sdk_custom_tool_methods_test.cpp  sdk_tool_call_methods_test.cpp
better-agent/core/tests/unit/memory/: memory_execution_guard_test.cpp  memory_store_query_test.cpp
better-agent/core/tests/unit/provider/: provider_payload_builders_test.cpp
better-agent/core/tests/unit/runtime/: policy_and_idempotency_test.cpp  runtime_normalization_contract_test.cpp  runtime_normalization_scenarios_test.cpp  rust_ability_preset_test.cpp  rust_basic_abilities_test.cpp  rust_gpt_builder_test.cpp  rust_gpt_builder_variants_test.cpp  rust_hooks_skills_test.cpp  rust_local_shell_and_payloads_test.cpp  rust_openai_provider_test.cpp  rust_runtime_tools_test.cpp  rust_toolset_test.cpp  sandbox_controls_test.cpp  sandbox_linux_probe_test.cpp  tool_executor_regressions_test.cpp  tool_registration_regressions_test.cpp  tool_registry_and_custom_calls_test.cpp
docs/: PraxisDurableRuntimeGuide.md  PraxisEntrySurfaces.md  PraxisEvaluationChecklist.md  PraxisFFICompatibility.md  PraxisGlossary.md  PraxisHighRiskCapabilitySafety.md  PraxisMigrationNotes.md  PraxisPerformanceBaseline.md  PraxisPlatformStatus.md  PraxisPreviewReleaseChecklist.md  PraxisPreviewReleaseNote.md  PraxisQuickStart.md  PraxisReleasePolicy.md  PraxisRepositoryBaseline.md  PraxisReviewerContextGuide.md  PraxisSupportMatrix.md  master.md  reboot-charter.md  thin-capabilities-review-handoff.md
memory/: README.md  compaction-handoff-prompt-cmp-final-closure.md  compaction-handoff-prompt-dev-mainline-runtime-bridge.md  compaction-handoff-prompt-five-agent.md  compaction-handoff-prompt.md  current-context.md
openspec/: config.yaml
script/: build_and_run.sh
scripts/: cmp-status-panel-server.mjs  install-dev-cli.mjs  raxode-dev.mjs  refactor-test-gates.mjs
src/: index.ts  raxcode-cli.test.ts  raxcode-cli.ts  raxcode-config.test.ts  raxcode-config.ts  raxcode-openai-auth.test.ts  raxcode-openai-auth.ts  raxode-login-tui.tsx  raxode-login-wizard.test.ts  raxode-login-wizard.ts  raxode-startup-splash.test.ts  raxode-startup-splash.ts  runtime-paths.ts  terminal-title.js  terminal-title.test.ts  terminal-title.ts  vendor-shims.d.ts
(+1593 files in other folders)
