set(AGENT_CORE_TEST_ROOT ${CMAKE_CURRENT_SOURCE_DIR})

function(add_agent_core_test test_name source_path)
    add_executable(${test_name} ${source_path})
    target_include_directories(${test_name} PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/common
        ${PROJECT_SOURCE_DIR}/header
        ${PROJECT_SOURCE_DIR}/third-party
    )
    target_link_libraries(${test_name} PRIVATE agent_core)
    add_test(NAME ${test_name} COMMAND ${test_name})
endfunction()

add_agent_core_test(
    agent_core_unit_runtime_tool_registry
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/tool_registry_and_custom_calls_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_policy_idempotency
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/policy_and_idempotency_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_execution_errors
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/execution_error_regressions_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_function_call_normalization
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/function_call_normalization_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_normalization_contract
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/runtime_normalization_contract_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_normalization_scenarios
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/runtime_normalization_scenarios_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_tool_registration_regressions
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/tool_registration_regressions_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_tool_executor_regressions
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/tool_executor_regressions_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_tool_kind_builtins
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/tool_kind_builtin_paths_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_hook_lifecycle
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/hook_lifecycle_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_sandbox_controls
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/sandbox_controls_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_sandbox_linux_probe
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/sandbox_linux_probe_test.cpp
)
add_agent_core_test(
    agent_core_unit_memory_store_query
    ${AGENT_CORE_TEST_ROOT}/unit/memory/memory_store_query_test.cpp
)
add_agent_core_test(
    agent_core_unit_memory_execution_guard
    ${AGENT_CORE_TEST_ROOT}/unit/memory/memory_execution_guard_test.cpp
)
add_agent_core_test(
    agent_core_unit_provider_payload
    ${AGENT_CORE_TEST_ROOT}/unit/provider/provider_payload_builders_test.cpp
)
add_agent_core_test(
    agent_core_unit_provider_roundtrip
    ${AGENT_CORE_TEST_ROOT}/unit/provider/execution_record_roundtrip_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_rust_gpt_builder
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/rust_gpt_builder_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_rust_gpt_builder_variants
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/rust_gpt_builder_variants_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_rust_runtime_tools
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/rust_runtime_tools_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_rust_toolset
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/rust_toolset_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_rust_basic_abilities
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/rust_basic_abilities_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_rust_hooks_skills
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/rust_hooks_skills_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_rust_openai_provider
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/rust_openai_provider_test.cpp
)
add_agent_core_test(
    agent_core_unit_runtime_rust_ability_preset
    ${AGENT_CORE_TEST_ROOT}/unit/runtime/rust_ability_preset_test.cpp
)

if(AGENT_CORE_USE_CPP_AI_SDK)
    add_agent_core_test(
        agent_core_integration_sdk_tool_calls
        ${AGENT_CORE_TEST_ROOT}/integration/sdk/sdk_tool_call_methods_test.cpp
    )
    add_agent_core_test(
        agent_core_integration_sdk_custom_tools
        ${AGENT_CORE_TEST_ROOT}/integration/sdk/sdk_custom_tool_methods_test.cpp
    )
endif()
